--- a/clone-web.html
+++ b/clone-web.html
@@ -32,7 +32,7 @@
 
     <header class="header2">
         <div>
-        <img src="../images/FrogSlayer_Logo.png" alt="">
+        <a href="clone-web.html"><img src="../images/FrogSlayer_Logo.png" alt=""></a>
         </div>
         <nav>
         <ul>
