--- a/contact.html
+++ b/contact.html
@@ -32,7 +32,7 @@
 
     <header class="header2">
         <div>
-        <a href="clone-web.html"><img src="../images/FrogSlayer_Logo.png" alt=""></a
+        <a href="clone-web.html"><img src="../images/FrogSlayer_Logo.png" alt=""></a>
         </div>
         <nav>
         <ul>
@@ -40,13 +40,18 @@
             <li><a href="#">pricing</a></li>
             <li><a href="#">process</a></li>
             <li><a href="#">whyfrogslayer</a></li>
-            <li><a href="#">contact</a></li>
+            <li class="set"><a href="contact.html">contact</a></li>
         </ul>
     </nav>
     </header>
 
+    <section class="banner-area">
+        <div class="bg-img"></div>
+        
+    </section>
+
     <nav class="contact">
-        <div class="con-bgi"></div>
+        <div class="busi-img"></div>
         <div class="contact-info1">
             <h1>LET'S TALK.</h1>
             <p>Wondering if custom software could help take your business to the next level? Do you need help with your custom software project? Looking for a development team to create your app? Fill out this form to contact us and you’ll hear back within 24 hours.</p><br>
